[package]
name = "RustPacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.23"
random-string = "1.0.0"
cargo = "0.70"
path-absolutize = "3.0.14"
fs_extra = "1.3.0"
path-clean = "1"
rand = "0.8.5"
libaes = "0.6.4"
