[package]
name = "create_remote_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.26.7"

[dependencies.windows]
version = "0.43"
features = [
    "Win32_UI_Input_Pointer",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_UI_Input_Pointer",
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
