[package]
name = "ntAPC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.26.7"
ntapi = { version = "0.4.0", features = ["impl-default"] }
winapi = { version = "0.3.9", features = ["ntdef", "ntstatus", "impl-default"] }
{{DEPENDENCIES}}

[profile.release]
strip = true  # Automatically strip symbols from the binary.
