[package]
name = "ntEarlyCascade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{{DLL_FORMAT}}

[dependencies]
winapi = { version = "0.3", features = ["winnt", "processthreadsapi", "memoryapi", "handleapi", "libloaderapi", "winbase"] }
{{DEPENDENCIES}}

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
